nb/failed.log
***tests/toyota/01.w_Defects***
bit_shift.c: In function ‘bit_shift_001’:
bit_shift.c:21:10: warning: left shift count >= width of type [-Wshift-count-overflow]
  ret = a << 32;/*Tool should detect this line as error*/ /*ERROR:Bit shift error*/
          ^~
bit_shift.c: In function ‘bit_shift_003’:
bit_shift.c:45:10: warning: left shift count >= width of type [-Wshift-count-overflow]
  ret = a << 32;/*Tool should detect this line as error*/ /*ERROR:Bit shift error*/
          ^~
bit_shift.c: In function ‘bit_shift_005’:
bit_shift.c:69:10: warning: left shift count is negative [-Wshift-count-negative]
  ret = a << -1;/*Tool should detect this line as error*/ /*ERROR:Bit shift error*/
          ^~
bit_shift.c: In function ‘bit_shift_006’:
bit_shift.c:81:10: warning: right shift count >= width of type [-Wshift-count-overflow]
  ret = a >> 32;/*Tool should detect this line as error*/ /*ERROR:Bit shift error*/
          ^~
bit_shift.c: In function ‘bit_shift_007’:
bit_shift.c:93:10: warning: right shift count is negative [-Wshift-count-negative]
  ret = a >> -1;/*Tool should detect this line as error*/ /*ERROR:Bit shift error*/
          ^~
bit_shift.c: In function ‘bit_shift_017’:
bit_shift.c:236:10: warning: left shift count >= width of type [-Wshift-count-overflow]
  ret = 1 << 32;/*Tool should detect this line as error*/ /*ERROR:Bit shift error*/
          ^~
buffer_overrun_dynamic.c: In function ‘dynamic_buffer_overrun_030’:
buffer_overrun_dynamic.c:778:1: error: expected declaration or statement at end of input
 }
 ^
make[1]: *** [Makefile:493: buffer_overrun_dynamic.o] Error 1
make: *** [Makefile:337: all-recursive] Error 1

